--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   equatable: ^2.0.7
   go_router: ^16.2.5
   cached_network_image: ^3.4.1
+  hive_ce: ^2.6.0
+  hive_ce_flutter: ^2.1.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
