--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   hive_ce: ^2.6.0
   hive_ce_flutter: ^2.1.0
   path_provider: ^2.1.5
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
